--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .ipynb_checkpoints/preliminary_exploration-checkpoint.ipynb
 
 .ipynb_checkpoints/grid_search-checkpoint.ipynb
+.ipynb_checkpoints/grid_search_band_cut-checkpoint.ipynb
+.ipynb_checkpoints/grid_search_both-checkpoint.ipynb
+.ipynb_checkpoints/visualization-checkpoint.ipynb
