--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .ipynb_checkpoints/grid_search_band_cut-checkpoint.ipynb
 .ipynb_checkpoints/grid_search_both-checkpoint.ipynb
 .ipynb_checkpoints/visualization-checkpoint.ipynb
+.ipynb_checkpoints/2nd_exploration-checkpoint.ipynb
