--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 .ipynb_checkpoints/grid_search_both-checkpoint.ipynb
 .ipynb_checkpoints/visualization-checkpoint.ipynb
 .ipynb_checkpoints/2nd_exploration-checkpoint.ipynb
+.ipynb_checkpoints/2nd_grid_search-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/2nd_grid_search-Copy2-checkpoint.ipynb
+**/*.ipynb
