--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .ipynb_checkpoints/preliminary_exploration-checkpoint.ipynb
-
 .ipynb_checkpoints/grid_search-checkpoint.ipynb
 .ipynb_checkpoints/grid_search_band_cut-checkpoint.ipynb
 .ipynb_checkpoints/grid_search_both-checkpoint.ipynb
@@ -7,4 +6,8 @@
 .ipynb_checkpoints/2nd_exploration-checkpoint.ipynb
 .ipynb_checkpoints/2nd_grid_search-Copy1-checkpoint.ipynb
 .ipynb_checkpoints/2nd_grid_search-Copy2-checkpoint.ipynb
-**/*.ipynb
+.ipynb_checkpoints/2nd_grid_search-checkpoint.ipynb
+.ipynb_checkpoints/3rd_exploration-checkpoint.ipynb
+.ipynb_checkpoints/3rd_grid_search-checkpoint.ipynb
+.ipynb_checkpoints/3rd_grid_search-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/3rd_grid_search-Copy1-checkpoint.ipynb
