--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 .ipynb_checkpoints/3rd_grid_search-checkpoint.ipynb
 .ipynb_checkpoints/3rd_grid_search-Copy1-checkpoint.ipynb
 .ipynb_checkpoints/3rd_grid_search-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/3rd_exploration-Copy1-checkpoint.ipynb
