--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@
 .ipynb_checkpoints/3rd_grid_search-Copy1-checkpoint.ipynb
 .ipynb_checkpoints/3rd_grid_search-Copy1-checkpoint.ipynb
 .ipynb_checkpoints/3rd_exploration-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/3rd_exploration-Copy2-checkpoint.ipynb
+.ipynb_checkpoints/3rd_grid_search-Copy2-checkpoint.ipynb
+.ipynb_checkpoints/4th_exploration-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/4th_exploration-Copy2-checkpoint.ipynb
+.ipynb_checkpoints/4th_grid_search-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/4th_grid_search-Copy2-checkpoint.ipynb
+.ipynb_checkpoints/5th_exploration-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/5th_exploration-Copy2-checkpoint.ipynb
+.ipynb_checkpoints/5th_exploration-Copy3-checkpoint.ipynb
+.ipynb_checkpoints/5th_exploration-Copy4-checkpoint.ipynb
+.ipynb_checkpoints/4th_exploration-checkpoint.ipynb
+.ipynb_checkpoints/4th_grid_search-checkpoint.ipynb
+.ipynb_checkpoints/5th_exploration-checkpoint.ipynb
