--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@
 .ipynb_checkpoints/4th_exploration-checkpoint.ipynb
 .ipynb_checkpoints/4th_grid_search-checkpoint.ipynb
 .ipynb_checkpoints/5th_exploration-checkpoint.ipynb
+.ipynb_checkpoints/6th_exploration-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/6th_exploration-Copy2-checkpoint.ipynb
+.ipynb_checkpoints/6th_exploration-Copy3-checkpoint.ipynb
+.ipynb_checkpoints/6th_exploration-Copy4-checkpoint.ipynb
+.ipynb_checkpoints/6th_exploration-checkpoint.ipynb
+.ipynb_checkpoints/final_presentation-checkpoint.ipynb
+.ipynb_checkpoints/others-checkpoint.ipynb
